tests/derive_ui/subcommand_opt_vec.stderr
error: Option<Vec<T>> types are not supported for subcommand
  --> tests/derive_ui/subcommand_opt_vec.rs:17:10
   |
17 |     cmd: Option<Vec<Command>>,
   |          ^^^^^^
